Removed image fullscreen bug upon rentering the same image. The arrows were not aligned with the images. Added Insta post

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -58,7 +58,7 @@
     position: fixed;
     top: 50%;
     z-index: 4;
-    opacity: 0.5;
+    opacity: 0.8;
 	padding: 2%;
 }
 .right {
